# CMakeLists.txt for directory src
AUX_SOURCE_DIRECTORY(./ SRCS)

# shared library
ADD_LIBRARY(spl SHARED ${SRCS})
SET_TARGET_PROPERTIES(spl PROPERTIES CLEAN_DIRECT_OUTPUT 1)

# static library
ADD_LIBRARY(spl_static STATIC ${SRCS})
SET_TARGET_PROPERTIES(spl_static PROPERTIES OUTPUT_NAME "spl")
SET_TARGET_PROPERTIES(spl_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

